[package]
name = "roastcraft-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.2"
tokio-modbus = { version = "*", default-features = false, features = ["rtu-sync"] }
tokio-serial = "5.4.4"
hex = "0.4"